package/ci: provide job IDs for the build status page.

--- a/package/ci/travis.yml
+++ b/package/ci/travis.yml
@@ -6,10 +6,12 @@ matrix:
     os: osx
     env:
     - VERSION=HEAD
+    - JOBID=head
   - language: cpp
     os: osx
     env:
     - VERSION=stable
+    - JOBID=stable
 
 install:
 # This fails for some reason, install it explicitly like this
