package/ci: actually, sceneconverter is in 2020.06 already, test it.

--- a/package/ci/circleci.yml
+++ b/package/ci/circleci.yml
@@ -100,8 +100,8 @@ jobs:
     - install:
         head: false
     - verify-imageconverter
-    # TODO: enable these when next release is out
-    #- verify-sceneconverter
+    - verify-sceneconverter
+    # TODO: enable this when next release is out
     #- verify-shaderconverter
     - verify-bindings
 
